# black-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
black-formatter/: black-formatter.py
scripts/: black-formatter.sh  flake8.sh  pytest.sh
