[metadata]
name = black-pre-commit
version = v1.0.0
description = Some out-of-the-box hooks for pre-commit.
url = https://github.com/itiievskyi/black-pre-commit
author = itiievskyi
author_email = ityevsiy@gmail.com
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    flake8
python_requires = >=3.6

[options.entry_points]
console_scripts =
    black-formatter = black-formatter:main

[options.packages.find]
exclude =
    tests*
    testing*